== 0.8.0

* Major enhancements:
  * Better handling of mixed 'or' clauses.
  * Allowing ':' in relations and scopes.

== 0.7.0 2010-05-27

* Major enhancements:
  * Fixed change class bugs.
  * A model can now include 'QueryBuilder' (better interface between class and compiler).
  * Better defaults declaration.
  * Added before_process and after_process hooks.
  * Using %Q{} to render dynamic string.
  * Added 'match' operator.
  * Added functions with dot syntax.
  * Added hook to deal with noop join scopes.
  * Better processing of clause_or (merging queries).
  * Fixed a bug preventing parse of empty literals (compiled extension).
  * Enabled functions on query parameters (RubyLess).
  * Added support for 'is null' and 'is not null'.

== 0.6.0 2010-03-19

* 4 major enhancements:
  * Complete rewrite of parser and processor.
  * Non compatible with previous parser.
  * Change in pseudo sql syntax: only support for "asc" or "desc" (downcase).
  * Using jeweler instead of hoe to package gem.

== 0.5.4 2009-04-09

* 1 minor enhancement:
  * Fixed a bug counting records wrong with multiple group fields.

== 0.5.3 2009-04-08

* 1 minor enhancement:
  * Added support for limit and paginate in custom queries.

== 0.5.2 2009-04-03

* 1 minor enhancement:
  * Added support for main_table option in custom queries.
  * More tests for custom queries.

== 0.5.1 2009-03-03

* 1 minor enhancement:
  * Added support for glob directories in load_custom_queries.

== 0.5.0 2009-01-23

* 1 major enhancement:
  * Initial release (extraction from zena: http://zenadmin.org).